Splash screen doesn't reposition vertically #68672

Closed
opened 2019-08-15 03:54:18 +02:00 by Luis de Bethencourt Guimera · 4 comments

System Information
Operating system: All

Blender Version
Broken: git master

Short description of error
When resizing the window right after startup, the Splash screen stays in the center horizontally but not vertically.

Exact steps for others to reproduce the error
Screen Shot 2019-08-14 at 9.32.19 PM.png

Open Blender and resize the window.

This was pointed out by HooglyBoogly in
https://wiki.blender.org/wiki/User:HooglyBoogly/

**System Information** Operating system: All **Blender Version** Broken: git master **Short description of error** When resizing the window right after startup, the Splash screen stays in the center horizontally but not vertically. **Exact steps for others to reproduce the error** ![Screen Shot 2019-08-14 at 9.32.19 PM.png](https://archive.blender.org/developer/F7665270/Screen_Shot_2019-08-14_at_9.32.19_PM.png) Open Blender and resize the window. This was pointed out by HooglyBoogly in https://wiki.blender.org/wiki/User:HooglyBoogly/

Added subscriber: @luisbg

Added subscriber: @luisbg
Luis de Bethencourt Guimera self-assigned this 2019-08-15 03:54:43 +02:00

Proposed fix D5508

This could also be fixed by adding a check if it is a splash screen in the if case above if (handle->refresh && handle->prev_block_rect.ymax > block->rect.ymax) {. But chaining 3 conditions felt less clean than just avoiding setting the handle->prev_block_rect and have it be the initial 0 which will mean that block above doesn't execute and hold the vertical position of the splash screen.

If chaining this in the existing if conditional is more consistent with Blender's style. Let me know and I will update.

Thanks! It was fun to investigate this one.

This is how it looks after I scale down the window vertically:
Screen Shot 2019-08-16 at 7.53.08 PM.png

Proposed fix [D5508](https://archive.blender.org/developer/D5508) This could also be fixed by adding a check if it is a splash screen in the if case above `if (handle->refresh && handle->prev_block_rect.ymax > block->rect.ymax) {`. But chaining 3 conditions felt less clean than just avoiding setting the `handle->prev_block_rect` and have it be the initial 0 which will mean that block above doesn't execute and hold the vertical position of the splash screen. If chaining this in the existing if conditional is more consistent with Blender's style. Let me know and I will update. Thanks! It was fun to investigate this one. This is how it looks after I scale down the window vertically: ![Screen Shot 2019-08-16 at 7.53.08 PM.png](https://archive.blender.org/developer/F7668375/Screen_Shot_2019-08-16_at_7.53.08_PM.png)

This issue was referenced by aebc596175

This issue was referenced by aebc5961757912b46b338c059fe67d138cfa2313

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68672
No description provided.