Fix T68672: splash screen does not remain centered when window resizes

Differential Revision: https://developer.blender.org/D5508